# PAMSI-project1

./: .clang-format  CMakeLists.txt  PanTadeusz.txt  README.md  main.cpp  output1.txt  output2.txt
Lib/: CMakeLists.txt
Lib/fml/: Heap.tpp  Pair.tpp
Lib/inc/: Heap.hpp  List.hpp  Pair.hpp
Lib/src/: Heap.cpp  List.cpp  Pair.cpp
fml/: Heap.tpp
inc/: Heap.hpp  Pair.hpp
src/: Heap.cpp  Pair.cpp
tests/: LoremIpsum.txt  Potop.txt  firmware  result.txt  shuffled.txt
